--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gcK-hO-ozh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gcK-hO-ozh">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -91,7 +91,7 @@
             </objects>
             <point key="canvasLocation" x="3591" y="188"/>
         </scene>
-        <!--Places View Controller-->
+        <!--HOME-->
         <scene sceneID="Gvc-5c-Ter">
             <objects>
                 <viewController id="Iyz-LG-mQU" customClass="PlacesViewController" sceneMemberID="viewController">
@@ -104,11 +104,69 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="HOME" image="homeIcon" id="Xtf-XK-Vso"/>
                     <navigationItem key="navigationItem" id="imX-MH-rca"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y51-Qa-bcL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1912.5" y="-2430"/>
+            <point key="canvasLocation" x="1888" y="-2658"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="twL-Dd-UjL">
+            <objects>
+                <viewController id="Qnu-C5-NeM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FYU-bn-KR9"/>
+                        <viewControllerLayoutGuide type="bottom" id="XBg-4u-Ocz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DSF-hj-NyN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="MwE-5g-eh6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DGC-ZB-xGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1856" y="-1796"/>
+        </scene>
+        <!--Chats-->
+        <scene sceneID="Bbv-a4-9kz">
+            <objects>
+                <viewController id="5uj-2t-qG5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fis-wz-tE1"/>
+                        <viewControllerLayoutGuide type="bottom" id="NMK-6l-jsa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="K6k-ql-f4T">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Chats" id="3Dn-dz-PNW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Lo-Gn-6yd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1828" y="-984"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="Lrb-zW-QuV">
+            <objects>
+                <viewController id="VYg-fy-M77" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QWJ-yr-4lD"/>
+                        <viewControllerLayoutGuide type="bottom" id="hhj-9B-8Rv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QGX-dq-C21">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Friends" id="yZ5-5Z-qML"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pb7-4N-kM2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1813" y="-155"/>
         </scene>
         <!--Ambassador View Controller-->
         <scene sceneID="dbT-4j-l2v">
@@ -310,7 +368,29 @@
             </objects>
             <point key="canvasLocation" x="3275" y="-2428"/>
         </scene>
-        <!--Profile View Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="LA4-te-j7y">
+            <objects>
+                <tabBarController id="KEM-pw-qi3" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="NLt-OU-GQp"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="YFu-Tg-GzV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Iyz-LG-mQU" kind="relationship" relationship="viewControllers" id="BDd-8p-8Sx"/>
+                        <segue destination="Qnu-C5-NeM" kind="relationship" relationship="viewControllers" id="TYH-Vs-Sz6"/>
+                        <segue destination="5uj-2t-qG5" kind="relationship" relationship="viewControllers" id="OYd-Ui-R14"/>
+                        <segue destination="VYg-fy-M77" kind="relationship" relationship="viewControllers" id="PZ0-0d-GvI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wfZ-BK-knH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="423" y="-698"/>
+        </scene>
+        <!--Profile-->
         <scene sceneID="4Co-ES-03f">
             <objects>
                 <tableViewController storyboardIdentifier="ProfileViewController" automaticallyAdjustsScrollViewInsets="NO" id="4XA-L7-y6d" customClass="ProfileViewController" sceneMemberID="viewController">
@@ -379,11 +459,12 @@
                             <outlet property="delegate" destination="4XA-L7-y6d" id="zzX-6o-scp"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Profile" id="Q7Z-Kb-1no"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zA2-sG-0eV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3124.5" y="-1601.5"/>
+            <point key="canvasLocation" x="2766.5" y="-1569.5"/>
         </scene>
         <!--Campus Notification View Controller-->
         <scene sceneID="KRE-xI-MdA">
@@ -502,15 +583,16 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Iyz-LG-mQU" kind="relationship" relationship="rootViewController" id="2Tb-XX-85Q"/>
+                        <segue destination="KEM-pw-qi3" kind="relationship" relationship="rootViewController" id="a3t-dY-Bh3"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jCL-wz-cUH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1140" y="-2423.75"/>
+            <point key="canvasLocation" x="-368" y="-706"/>
         </scene>
     </scenes>
     <resources>
+        <image name="homeIcon" width="29" height="33"/>
         <image name="placesIcon.png" width="15" height="21"/>
     </resources>
     <color key="tintColor" red="0.95686280729999995" green="0.58431375029999999" blue="0.1764705926" alpha="1" colorSpace="deviceRGB"/>
