--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -359,6 +359,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.3921568627" green="0.67843137249999996" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="Iyz-LG-mQU" kind="relationship" relationship="viewControllers" id="BDd-8p-8Sx"/>
@@ -558,7 +559,6 @@
         <!--Where-->
         <scene sceneID="CUn-1Q-ll3">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jCL-wz-cUH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController definesPresentationContext="YES" id="gcK-hO-ozh" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Where" id="Ewa-dt-Zfe"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Is-XA-40F">
@@ -568,15 +568,16 @@
                         <segue destination="KEM-pw-qi3" kind="relationship" relationship="rootViewController" id="a3t-dY-Bh3"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jCL-wz-cUH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-368" y="-706"/>
         </scene>
     </scenes>
     <resources>
-        <image name="chatTabIcon" width="40" height="32"/>
-        <image name="friendsIcon" width="35" height="39"/>
-        <image name="homeIcon" width="30" height="34"/>
-        <image name="profileIcon" width="29" height="34"/>
+        <image name="chatTabIcon" width="32" height="25"/>
+        <image name="friendsIcon" width="28" height="31"/>
+        <image name="homeIcon" width="24" height="27"/>
+        <image name="profileIcon" width="23" height="27"/>
     </resources>
     <color key="tintColor" red="0.95686280729999995" green="0.58431375029999999" blue="0.1764705926" alpha="1" colorSpace="deviceRGB"/>
 </document>
