--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CqT-lH-jAT">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                                <rect key="frame" x="0.0" y="360" width="320" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="cDo-Ko-bDq"/>
                                 </constraints>
@@ -68,7 +68,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CqT-lH-jAT" firstAttribute="top" secondItem="VbK-jd-SdY" secondAttribute="top" id="FqQ-u2-XRV"/>
+                            <constraint firstItem="CqT-lH-jAT" firstAttribute="bottom" secondItem="VbK-jd-SdY" secondAttribute="bottom" id="FqQ-u2-XRV"/>
                             <constraint firstAttribute="trailing" secondItem="CqT-lH-jAT" secondAttribute="trailing" id="Vd6-uH-2eT"/>
                             <constraint firstItem="CqT-lH-jAT" firstAttribute="leading" secondItem="VbK-jd-SdY" secondAttribute="leading" id="p3R-OZ-fpH"/>
                         </constraints>
