--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -122,7 +122,7 @@
             </objects>
             <point key="canvasLocation" x="1856" y="-1796"/>
         </scene>
-        <!--Friends-->
+        <!--Discover-->
         <scene sceneID="Bbv-a4-9kz">
             <objects>
                 <viewController id="5uj-2t-qG5" customClass="PeopleViewController" sceneMemberID="viewController">
@@ -135,7 +135,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Friends" image="friendsIcon" id="3Dn-dz-PNW"/>
+                    <tabBarItem key="tabBarItem" title="Discover" image="friendsIcon" id="3Dn-dz-PNW"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Lo-Gn-6yd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
